[package]
name = "gpusorted_map"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "GPU-accelerated sorted key/value store built on wgpu"
license = "MIT"
readme = "README.md"
repository = "https://github.com/KentBeck/GPUSortedMap"
keywords = ["gpu", "wgpu", "kv", "key-value", "data-structures"]
categories = ["data-structures", "algorithms", "hardware-support"]

[dependencies]
bytemuck = { version = "1.14", features = ["derive"] }
pollster = "0.3"
rand = "0.8"
wgpu = "0.20"

[[bench]]
name = "perf"
harness = false
